@@ -1,11 +1,6 @@
 # English strings for dilutions
 
-big=big
-concentrationM1=<html><center>Concentration<br>M<sub>1</sub> (mol/L)</html>
-concentrationM2=<html><center>Concentration<br>M<sub>2</sub> (mol/L)</html>
 dilutions.name=Dilutions
-dilution=Dilution
-empty=empty
 full=full
 high=high
 koolAid=Kool-Aid\u00ae
@@ -15,14 +10,10 @@ molarity=Molarity
 molarity.name=Molarity
 none=none
 saturated=Saturated!
-small=small
 solute=Solute
 soluteAmount=<html><center>Solute<br>Amount<br>(moles)</html>
-solution=Solution
 solutionConcentration=<html><center>Solution<br>Concentration<br>(Molarity)</html>
 solutionVolume=<html><center>Solution<br>Volume<br>(Liters)</html>
-volumeV1=<html><center>Volume<br>V<sub>1</sub> (L)</html>
-volumeV2=<html><center>Volume<br>V<sub>2</sub> (L)</html>
 zero=zero
 
 # Solutes
