@@ -1,7 +1,9 @@
+1/16/12 remove strings that are specific to DilutionsApplication from strings file, so they aren't visible to the MolarityApplication translators
 1/16/12 use lowercase "m" in "moles"
 1/16/12 add min/max color range for solutes (ala beers-law-lab)
 1/12/12 delete strings related to Beer's Law tab, since that tab became its own sim project
 1/12/12 add Molarity sims flavor
+1/12/12 ***** decision made to publish the first tab (Molarity) as "Molarity" sim
 1/12/12 names (no formulae) for solutes in combo box
 1/12/12 capitalize solute names
 12/6/11 #3175, add sim-sharing args to usages of SliderThumbDragHandler
